--- a/style.css
+++ b/style.css
@@ -618,8 +618,7 @@ a {
 
 .menu-icon {
     display: none;
-    stroke: var(--color-text-primary);
-    transition: transform 0.2s ease, stroke 0.2s ease;
+    cursor: pointer;
 }
 
 .heading-accent {
@@ -1006,7 +1005,7 @@ a {
 }
 
 .fadeInUp {
-    animation: fadeInUp 0.8s ease;
+    animation: fadeInUp 0.6s ease;
 }
 
 @keyframes fadeInUp {
@@ -1243,9 +1242,55 @@ body.header-not-at-top .continue-icon {
         align-items: center;
     }
 
-    .responsive .logo, .responsive .menu-icon {
-        color: var(--color-text-white);
+    .line {
+        fill: none;
+        stroke: var(--color-text-primary);
+        stroke-width: 8;
+        stroke-linecap: round;
+        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+                    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1),
+                    stroke 600ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+    .line1 {
+        stroke-dasharray: 60 207;
+        stroke-width: 8;
+    }
+
+    .line2 {
+        stroke-dasharray: 60 60;
+        stroke-width: 8;
+    }
+
+    .line3 {
+        stroke-dasharray: 60 207;
+        stroke-width: 8;
+    }
+
+    .responsive .line {
         stroke: var(--color-text-white);
+    }
+
+    .responsive .line1 {
+        stroke-dasharray: 90 207;
+        stroke-dashoffset: -134;
+        stroke-width: 8;
+    }
+
+    .responsive .line2 {
+        stroke-dasharray: 1 60;
+        stroke-dashoffset: -30;
+        stroke-width: 8;
+    }
+
+    .responsive .line3 {
+        stroke-dasharray: 90 207;
+        stroke-dashoffset: -134;
+        stroke-width: 8;
+    }
+
+    .responsive .logo {
+        color: var(--color-text-white);
     }
 
     .responsive .nav-link {
